fix checkbox and radio text wrap bug

--- a/src/base-ui.less
+++ b/src/base-ui.less
@@ -405,15 +405,17 @@ label.title{
 
 label.checkbox,
 label.radio{
+    padding-left:34px;
     line-height:30px;
 }
 
 label.checkbox input[type=checkbox],
 label.radio input[type=radio]{
+    position:absolute;
     display:inline-block;
     width:32px;
     height:32px;
-    margin-right:2px;
+    margin-left:-34px;
     overflow:visible;
     vertical-align:middle;
 }
